# sdlpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
imported/imgui/: CMakeLists.txt  imconfig.h
samples/WindowTest/: CMakeLists.txt  WindowTest.cpp  WindowTest.h  main.cpp
sdlpp/: CMakeLists.txt
sdlpp/Core/: Application.cpp  Application.h  ErrorHandling.cpp  ErrorHandling.h  EventHandler.cpp  EventHandler.h  Logging.cpp  Logging.h  Power.cpp  Power.h  Timer.cpp  Timer.h
sdlpp/Gui/: GuiContext.cpp  GuiContext.h  Image.cpp  Image.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Window.cpp  Window.h
sdlpp/Media/: Audio.cpp  Audio.h  AudioMixer.cpp  AudioMixer.h  Camera.cpp  Camera.h
